--- a/DbGui/DbGui.csproj
+++ b/DbGui/DbGui.csproj
@@ -8,7 +8,6 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Folder Include="Models" />
       <Folder Include="ViewModels" />
     </ItemGroup>
 
@@ -26,6 +25,36 @@
         <XamlRuntime>Wpf</XamlRuntime>
         <SubType>Designer</SubType>
       </Page>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Compile Include="..\..\DBFirstLab\Core\CsvJsonFilesInteraction.cs">
+        <Link>Models\Core\CsvJsonFilesInteraction.cs</Link>
+      </Compile>
+      <Compile Include="..\..\DBFirstLab\Core\CsvTable.cs">
+        <Link>Models\Core\CsvTable.cs</Link>
+      </Compile>
+      <Compile Include="..\..\DBFirstLab\Core\DbException.cs">
+        <Link>Models\Core\DbException.cs</Link>
+      </Compile>
+      <Compile Include="..\..\DBFirstLab\Core\DbReflection.cs">
+        <Link>Models\Core\DbReflection.cs</Link>
+      </Compile>
+      <Compile Include="..\..\DBFirstLab\Core\DbTest.cs">
+        <Link>Models\Core\DbTest.cs</Link>
+      </Compile>
+      <Compile Include="..\..\DBFirstLab\Core\EnumOperation.cs">
+        <Link>Models\Core\EnumOperation.cs</Link>
+      </Compile>
+      <Compile Include="..\..\DBFirstLab\Core\Extensions.cs">
+        <Link>Models\Core\Extensions.cs</Link>
+      </Compile>
+      <Compile Include="..\..\DBFirstLab\Core\JsonParser.cs">
+        <Link>Models\Core\JsonParser.cs</Link>
+      </Compile>
+      <Compile Include="..\..\DBFirstLab\Core\LoggerBase.cs">
+        <Link>Models\Core\LoggerBase.cs</Link>
+      </Compile>
     </ItemGroup>
 
 </Project>
